# tfg-navegacion-autonoma-unitree-g1

./: .gitignore  README.md
sim2real/: unitree.sh
sim2real/C++/unitree_slam_example_c++/example/src/: keyDemo.cpp
sim2real/Python/g1_control_studio/: main.py  slam_bridge.py
sim2real/Python/g1_control_studio/config/: app_config.py
sim2real/Python/g1_control_studio/core/: process_manager.py  ros_environment.py  rviz_manager.py
sim2real/Python/g1_control_studio/services/: slam_service.py
sim2real/Python/g1_control_studio/ui/: main_window.py
sim2real/Python/g1_control_studio/ui/components/: header_bar.py  log_widget.py  metric_card.py  sidebar.py  status_badge.py
sim2real/Python/g1_control_studio/ui/pages/: base_page.py  dashboard_page.py  localization_page.py  logs_page.py  mapping_page.py  navigation_page.py  rviz_page.py  settings_page.py
sim2real/Python/g1_control_studio/ui/styles/: theme.py
sim2real/Python/g1_control_studio/utils/: validators.py
sim2real/Python/unitree_sdk2_python/: README.md  setup.py
sim2real/Python/unitree_sdk2_python/example/g1/audio/: g1_audio_client_example.py
sim2real/Python/unitree_sdk2_python/example/g1/high_level/: g1_loco_client_example.py
sim2real/Python/unitree_sdk2_python/unitree_sdk2py/: __init__.py
sim2real/Python/unitree_sdk2_python/unitree_sdk2py/robot/g1/audio/: g1_audio_api.py  g1_audio_client.py
sim2real/Python/unitree_slam_example_python/example/: README.md
sim2real/Python/unitree_slam_example_python/example/src/: keyDemo.py
sim2real/fastlio_clean_ws/: .gitignore  Readme.txt
sim2real/fastlio_clean_ws/src/fast_lio/config/: mid360.yaml
sim2real/fastlio_clean_ws/src/g1_livox_gravity_split/: CMakeLists.txt  README.md  package.xml
sim2real/fastlio_clean_ws/src/g1_livox_gravity_split/config/: params.yaml
sim2real/fastlio_clean_ws/src/g1_livox_gravity_split/launch/: gravity_split.launch.py
sim2real/fastlio_clean_ws/src/g1_livox_gravity_split/src/: gravity_quaternion_estimator.cpp  livox_gravity_applicator.cpp
sim2real/fastlio_clean_ws/src/g1_mapping_stack/: CMakeLists.txt  README.md  package.xml
sim2real/fastlio_clean_ws/src/g1_mapping_stack/config/: pc2_to_scan.yaml  slam_toolbox_online.yaml
sim2real/fastlio_clean_ws/src/g1_mapping_stack/description/: README_PON_AQUI_TU_URDF.md
sim2real/fastlio_clean_ws/src/g1_mapping_stack/description/urdf/: g1_minimal_livox.urdf.xacro
sim2real/fastlio_clean_ws/src/g1_mapping_stack/launch/: online_mapping_with_urdf.launch.py  record_mapping_bag.launch.py
sim2real/fastlio_clean_ws/src/g1_mapping_stack/rviz/: mapping.rviz
sim2real/fastlio_clean_ws/src/g1_mapping_stack/scripts/: check_runtime_deps.sh  install_runtime_deps.sh  record_mapping_bag.sh  save_map.sh
sim2real/rosbags/mapping/: metadata.yaml
sim2real/rosbags/navigation/: metadata.yaml
sim2sim/g1man3D/: README.md  README_LARGE.md
sim2sim/g1man3D/mapeo/slam_toolbox/: README.md  g1_slam.launch.py  slam_toolbox_params.yaml
sim2sim/g1man3D/mujoco/simulacion/: mujoco_ros2_lidar_bridge.py  run_sim_ai_g1.py  unitree_mujoco.py
sim2sim/g1man3D/rviz2/: g1_slam.rviz
sim2sim/g1man3D/teleop/: g1_client_mujoco.py
sim2sim/g1man3D/wallforge_studio/: README.md  main.py
sim2sim/g1man3D/wallforge_studio/editor/: canvas.py  snap.py  tools.py
sim2sim/g1man3D/wallforge_studio/export/: mujoco_exporter.py  repo_scene_exporter.py
sim2sim/g1man3D/wallforge_studio/image/: detector.py  loader.py
sim2sim/g1man3D/wallforge_studio/model/: project.py  wall.py
sim2sim/g1man3D/wallforge_studio/ui/: app.py
sim2sim/g1man3D/wallforge_studio/utils/: geometry.py
(+4 files in other folders)
