<?xml version="1.0"?>
<package format="3">
  <name>g1_livox_gravity_split</name>
  <version>0.0.1</version>
  <description>Estimate a gravity-alignment quaternion from Livox IMU and apply it to Livox CustomMsg clouds and IMU for FAST-LIO2.</description>
  <maintainer email="user@example.com">OpenAI</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>livox_ros_driver2</depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <depend>Eigen3</depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
