<?xml version="1.0"?>
<package format="3">
  <name>g1_mapping_stack</name>
  <version>0.2.0</version>
  <description>ROS 2 Humble mapping stack for Unitree G1 with URDF/Xacro, robot_state_publisher, PointCloud2 to LaserScan, slam_toolbox, rosbag recording and map saving.</description>

  <maintainer email="pablo@example.com">Pablo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
